# mdeditor

./: .eslintignore  .gitattributes  .gitignore  LICENCE  README.md  eslint.config.mjs  index.html  pack-linux.sh  pack-windows.ps1  package.json  pnpm-lock.yaml  vite.config.ts
linux/: pack-linux.sh
src/: index.css  index.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: Preview.ts  SyncPanel.ts
src/services/: fileSystem.ts  markdown.ts  p2pSync.ts  search.ts  tauri-api.ts
